--- a/index.html
+++ b/index.html
@@ -1,11 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Oleg Nosyrev Front End Developer Resume, Projects and Education History" />
-    <meta name="title" property="og:title" content="Oleg Nosyrev Front End Developer" />
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="Oleg Nosyrev Front End Developer Resume, Projects and Education History"
+    />
+    <meta
+      name="title"
+      property="og:title"
+      content="Oleg Nosyrev Front End Developer"
+    />
     <meta property="og:type" content="Portfolio" />
     <meta
       name="image"
@@ -19,7 +25,7 @@
     />
     <meta name="author" content="Oleg Nosyrev" />
 
-    <title>Front End Web Developer | Oleg N.</title>
+    <title>Senior Front End Engineer | Oleg N.</title>
     <link
       rel="stylesheet"
       href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
@@ -50,51 +56,81 @@
 
   <body>
     <header id="home" class="noselect">
-        <nav class="navbar navbar-expand-md navbar-light">
-            <button aria-controls="navbar" aria-expanded="false" aria-label="Toggle navigation"
-                class="navbar-toggler ml-auto" data-target="#navbar" data-toggle="collapse" type="button">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbar">
-                <ul class="navbar-nav m-auto mt-2">
-                    <li class="nav-item ml-auto"><button id="sakura-btn" class="nav-link theme"
-                            data-page="sakura">Sakura Theme</button></li>
-                    <li class="nav-item ml-auto"><a class="nav-link contact-link" href="#my-projects">My Projects</a>
-                    </li>
-                    <li class="nav-item ml-auto"><a class="nav-link"
-                            href="img/certificates/Oleg_Nosyrev_Senior_Frontend_resume.pdf" target="_blank">Resume</a></li>
-                    <li class="nav-item ml-auto"><a class="nav-link" href="#" data-toggle="modal"
-                            data-target="#UW">University of Washington</a></li>
-                            <li class="nav-item dropdown ml-auto">
-                                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
-                                data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                Harvard
-                            </a>
-                            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                <a class="dropdown-item" href="#" data-toggle="modal" data-target="#CS50x">CS50x by
-                                    Harvard</a>
-                                    <a class="dropdown-item" href="#" data-toggle="modal" data-target="#CS50w">Web Programming
-                                        by Harvard</a>
-                                    </div>
-                                </li>
-                    <li  class="nav-item ml-auto"><a class="nav-link" href="#" data-toggle="modal"
-                            data-target="#INTERN">Internship</a></li>
-
-                    <li class="nav-item ml-auto">
-                        <div class="nav-link">
-                            <a class="nav-social-link" href="https://github.com/ymmy1" target="_blank"><i
-                                    class="fab fa-github-square"></i></a>
-                            <a class="nav-social-link" href="https://www.linkedin.com/in/oleg-nosyrev-440640114"
-                                target="_blank"><i class="fab fa-linkedin"></i></a>
-                            <a id="contact-link" class="nav-social-link contact-link" href="#contact-me"><i
-                                    class="fas fa-at"></i></a>
-                        </div>
-                    </li>
-                    <li class="nav-item ml-auto"><button id="ocean-btn" class="nav-link theme" data-page="ocean">Ocean
-                            Theme</button></li>
-                </ul>
-            </div>
-        </nav>
+      <nav class="navbar navbar-expand-md navbar-light">
+        <button
+          aria-controls="navbar"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+          class="navbar-toggler ml-auto"
+          data-target="#navbar"
+          data-toggle="collapse"
+          type="button"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbar">
+          <ul class="navbar-nav m-auto mt-2">
+            <li class="nav-item ml-auto">
+              <button id="sakura-btn" class="nav-link theme" data-page="sakura">
+                Sakura Theme
+              </button>
+            </li>
+            <li class="nav-item ml-auto">
+              <a class="nav-link contact-link" href="#my-projects"
+                >My Projects</a
+              >
+            </li>
+            <li class="nav-item ml-auto">
+              <a
+                class="nav-link"
+                href="img/certificates/Oleg_Nosyrev_Senior_Frontend_resume.pdf"
+                target="_blank"
+                >Resume</a
+              >
+            </li>
+            <li class="nav-item ml-auto">
+              <a class="nav-link" href="#" data-toggle="modal" data-target="#UW"
+                >University of Washington</a
+              >
+            </li>
+            <li class="nav-item dropdown ml-auto">
+              <a
+                class="nav-link dropdown-toggle"
+                href="#"
+                id="navbarDropdown"
+                role="button"
+                data-toggle="dropdown"
+                aria-haspopup="true"
+                aria-expanded="false"
+              >
+                Harvard
+              </a>
+              <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                <a
+                  class="dropdown-item"
+                  href="#"
+                  data-toggle="modal"
+                  data-target="#CS50x"
+                  >CS50x by Harvard</a
+                >
+                <a
+                  class="dropdown-item"
+                  href="#"
+                  data-toggle="modal"
+                  data-target="#CS50w"
+                  >Web Programming by Harvard</a
+                >
+              </div>
+            </li>
+            <li class="nav-item ml-auto">
+              <a
+                class="nav-link"
+                href="#"
+                data-toggle="modal"
+                data-target="#INTERN"
+                >Internship</a
+              >
+            </li>
 
             <li class="nav-item ml-auto">
               <div class="nav-link">
@@ -143,7 +179,7 @@
         </div>
         <div class="title">
           <span class="small-title ml3"
-            >Front&nbsp;End&nbsp;Web&nbsp;Developer</span
+            >Senior&nbsp;Front&nbsp;End&nbsp;Engineer</span
           >
           <h1 class="main-title ml14">Oleg Nosyrev</h1>
           <a
@@ -228,15 +264,12 @@
           </ol>
           <div class="carousel-inner">
             <div class="carousel-item active">
-              <p>MOTIVATED, QUICK LEARNING, SELF-TAUGHT FRONT END DEVELOPER.</p>
+              <p>ENTHUSIASTIC, FAST-LEARNING, SELF-TAUGHT PROFESSIONAL.</p>
               <p>HARVARD UNIVERSITY & UNIVERSITY OF WASHINGTON STUDENT.</p>
               <p>
                 6+ YEAR OF EXPERIENCE WITH FRONTEND APPLICATIONS DEVELOPMENT.
               </p>
-              <p>
-                PRIMARY FOCUSING ON FRONT END DEVELOPMENT WITH A BASIC KNOWLEDGE
-                OF BACK END.
-              </p>
+              <p>SPECIALIZING IN FRONT-END DEVELOPMENT.</p>
             </div>
             <div class="carousel-item">
               <div class="skills">
@@ -1246,48 +1279,20 @@
       </form>
     </section>
     <footer id="footer">
-        <div class="footer-dark">
-            <div class="title noselect">
-                <a href="img/certificates/Oleg_Nosyrev_Senior_Frontend_resume.pdf" download>
-                    Oleg&nbsp;Nosyrev
-                </a>
-            </div>
-            <ul>
-                <li><a class="contact-link" href="img/certificates/Oleg_Nosyrev_Senior_Frontend_resume.pdf" download>Resume</a>
-                </li>
-                <li><a class="contact-link" href="#home">Oleg Nosyrev</a></li>
-                <li><a class="contact-link" href="#about">About</a></li>
-                <li><a class="contact-link" href="#my-projects">My Projects</a></li>
-                <li><a class="contact-link" href="#contact-me">Contact Me</a></li>
-                <li>
-                    <div class="links">
-                        <a href="https://github.com/ymmy1" target="_blank">
-                            <div class="github">
-                                <i class="fab fa-github-square"></i>
-                                <p class="github"></p>
-                            </div>
-                        </a>
-                        <a href="https://www.linkedin.com/in/oleg-nosyrev-440640114" target="_blank">
-                            <div class="linkedin">
-                                <i class="fab fa-linkedin"></i>
-                                <p class="linkedin"></p>
-                            </div>
-                        </a>
-                        <a href="mailto:oleg.ymmy@gmail.com" target="_blank">
-                            <div class="email">
-                                <i class="fas fa-at"></i>
-                            </div>
-                        </a>
-                    </div>
-                </li>
-            </ul>
-
+      <div class="footer-dark">
+        <div class="title noselect">
+          <a
+            href="img/certificates/Oleg_Nosyrev_Senior_Frontend_resume.pdf"
+            download
+          >
+            Oleg&nbsp;Nosyrev
+          </a>
         </div>
         <ul>
           <li>
             <a
               class="contact-link"
-              href="img/certificates/Oleg_Nosyrev_Frontend_resume.pdf"
+              href="img/certificates/Oleg_Nosyrev_Senior_Frontend_resume.pdf"
               download
               >Resume</a
             >
@@ -1323,32 +1328,6 @@
         </ul>
       </div>
     </footer>
-
-    <!-- Modal Resume -->
-    <div class="modal fade" id="resume" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle"
-        aria-hidden="true">
-        <div class="modal-dialog modal-dialog-centered" role="document">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <h5 class="modal-title" id="exampleModalLongTitle">Resume</h5>
-                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                        <span aria-hidden="true">&times;</span>
-                    </button>
-                </div>
-                <div class="modal-body">
-                    <img src="img/certificates/Oleg_Nosyrev_Front_End_Portfolio-1.jpg" alt="">
-                </div>
-                <div class="modal-footer">
-                    <a href="img/certificates/Oleg_Nosyrev_Senior_Frontend_resume.pdf" download>
-                        <button type="button" class="btn">
-                            <i class="fa fa-download"></i> Download
-                        </button>
-                    </a>
-                </div>
-            </div>
-        </div>
-      </div>
-    </div>
 
     <!-- Modal UW -->
     <div
