--- a/index.html
+++ b/index.html
@@ -53,6 +53,20 @@
     <link rel="stylesheet" href="css/ocean.css" />
     <link rel="stylesheet" href="css/style.css" />
   </head>
+  <!-- Google tag (gtag.js) -->
+  <script
+    async
+    src="https://www.googletagmanager.com/gtag/js?id=G-K9GKVD2LZG"
+  ></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() {
+      dataLayer.push(arguments);
+    }
+    gtag('js', new Date());
+
+    gtag('config', 'G-K9GKVD2LZG');
+  </script>
 
   <body>
     <header id="home" class="noselect">
