ocean theme update

--- a/index.html
+++ b/index.html
@@ -207,6 +207,7 @@
         <div class="bird-container bird-container--four">
           <div class="bird bird--four"></div>
         </div>
+        <div class="the-boat"></div>
         <div class="title">
           <span class="small-title ml3"
             >Senior&nbsp;Front&nbsp;End&nbsp;Engineer</span
@@ -249,25 +250,25 @@
                 xlink:href="#gentle-wave"
                 x="48"
                 y="0"
-                fill="rgba(119,187,232,0.7"
+                fill="rgb(56, 171, 139,0.7)"
               />
               <use
                 xlink:href="#gentle-wave"
                 x="48"
                 y="3"
-                fill="rgba(119,187,232,0.5)"
+                fill="rgb(56, 171, 139,0.5)"
               />
               <use
                 xlink:href="#gentle-wave"
                 x="48"
                 y="5"
-                fill="rgba(119,187,232,0.3)"
+                fill="rgb(56, 171, 139,0.3)"
               />
               <use
                 xlink:href="#gentle-wave"
                 x="48"
                 y="7"
-                fill="rgba(119,187,232,1)"
+                fill="rgb(56, 171, 139,0.1)"
               />
             </g>
           </svg>
