--- a/public/index.html
+++ b/public/index.html
@@ -38,7 +38,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Oleg N | Front End Developer</title>
+    <title>Front End Engineer | Portfolio</title>
   </head>
     <!-- Google tag (gtag.js) -->
   <script
