--- a/public/index.html
+++ b/public/index.html
@@ -21,6 +21,7 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
+    <meta http-equiv="Cache-Control" content="max-age=604800">
     <meta
       name="description"
       content="Web site created using create-react-app"
