--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,7 @@
     <meta http-equiv="Cache-Control" content="max-age=604800">
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Edo Perdiod Themed Front End Porftolio. Author: Oleg Nosyrev"
     />
     <!--
       manifest.json provides metadata used when your web app is installed on a
