project view change

--- a/public/index.html
+++ b/public/index.html
@@ -25,7 +25,7 @@
     <meta http-equiv="Cache-Control" content="max-age=604800">
     <meta
       name="description"
-      content="Edo Perdiod Themed Front-End Porftolio. Author: Oleg Nosyrev"
+      content="Edo Perdiod Themed Front End Porftolio. Author: Oleg Nosyrev"
     />
     <!--
       manifest.json provides metadata used when your web app is installed on a
@@ -40,7 +40,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Front-End Engineer | Portfolio</title>
+    <title>Front End Engineer | Portfolio</title>
   </head>
     <!-- Google tag (gtag.js) -->
   <script
